# FinPack

./: .gitignore  README.md  app.py  blueproint.md  build.bat  build.ps1  finpack.spec  last_prompts.txt  log_setup.py  main.py  pyproject.toml  requirements.txt  run.py  run_btc.py  test_output.json  tsmc.py
.claude/: settings.local.json
_backup/2026-02-26/: main.py
backtest/: __init__.py  benchmark.py  config.py  engine.py  log_utils.py  report.py  runner.py  smc_config.py  smc_engine.py
cache/: market_data.pkl  tsmc_analysis.pkl
cloud_functions/: README.md  __init__.py  align.py  backtest.py  config.py  data.py  indicator.py  requirements.txt  run.py
cloud_functions/cache/: watchlist.pkl
core/: __init__.py  align.py  config.py  container.py  currency.py  data.py  indicator.py  market.py  smc.py  smc_service.py
docs/: ARCHITECTURE.md  backtest_reference.md  core_reference.md  engine_document.md  known_issues.md  smart_money_evaluation.md  src_document.md  strategy_guide.md  system_design.md  web_reference.md
docs/backup/: ARCHITECTURE.md  LOGIC_DIFF_REPORT.md  src_document.md  (+2 more)
investment_funds/: demo.py  libs.py
old_templates/: index.html
routes/: market.py  stock.py
src/: __init__.py  align.py  config.py  data.py  indicator.py  stock.py
templates/: index.html
tests/: test_backtest_params.py  test_batch_strategy.py  test_condition_logic.py  test_currency.py  test_engine_integration.py  test_logic_real.py  test_logic_standalone.py
utils/: __init__.py  market.py  stock_cache.py
venture_capital/: demo.py  utils.py
web/: __init__.py  market.py
(+49 files in other folders)
