# FinPack 專案配置
# 詳細架構說明見 README.md

[project]
name = "finpack"
version = "0.1.0"
description = "全球市場看盤與回測系統 - Sharpe Ratio 分析、交易模擬、回測引擎"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "yfinance>=1.1.0",
]
