# FinPack 專案配置
# 套件安裝使用 pip: pip install -r requirements.txt
# PyInstaller 打包使用 build.ps1 或 build.bat

[project]
name = "finpack"
version = "2.0.0"
description = "全球市場看盤與回測系統 - Sharpe Ratio 分析、後端回測引擎"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "numpy>=1.24.0",
    "pandas==2.2.3",
    "requests>=2.28.0",
    "scipy>=1.10.0",
    "yfinance>=0.2.28",
]
